--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next-auth": "^4.24.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-share": "^5.1.1"
+    "react-share": "^5.1.1",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "postcss": "^8",
